--- a/project-node-app/package.json
+++ b/project-node-app/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^2.9.3",
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1"
