--- a/project-node-app/package.json
+++ b/project-node-app/package.json
@@ -12,6 +12,8 @@
     "chart.js": "^2.9.3",
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "xml2js": "^0.4.23",
+    "xmlbuilder": "^15.1.1"
   }
 }
